helm/charts/fusion/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusion
  labels:
    app: fusion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fusion
  template:
    metadata:
      labels:
        app: fusion
    spec:
      containers:
        - name: fusion
          image: ghcr.io/0x2e/fusion:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: fusion-data
      volumes:
        - name: fusion-data
          persistentVolumeClaim:
            claimName: fusion-data
