helm/charts/fusion/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fusion
spec:
  selector:
    app: fusion
  ports:
    - port: 8080
